--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 		<!-- Подключаем наш файл со стилями, который находится в папке css-->
 		<link rel="stylesheet" href="css/bootstrap-grid.min.css">
+		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -30,14 +31,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-7">
-				<img class="header-img" src="img/main-img.png" alt="Кампутер">
+				<img class="header-img wow fadeInLeftBig" src="img/main-img.png" alt="Кампутер">
 			</div>
 			<!-- /.col-7 -->
 			<div class="col-lg-5">
-				<p clclass="" ass="header-pretitle">Веб-разработчик</p>
-				<h1 class="header-title">Игорь Монастырный</h1>
-				<p class="header-subtitle">Верстка на HTML/CSS <br>Разработка сайтов под ключ</p>
-				<div class="header-button-block">
+				<p class="header-pretitle wow fadeInRightBig" data-wow-delay="0.1s">Веб-разработчик</p>
+				<h1 class="header-title wow fadeInRightBig" data-wow-delay="0.2s">Игорь Монастырный</h1>
+				<p class="header-subtitle wow fadeInRightBig data-wow-delay="0.3s"">Верстка на HTML/CSS <br>Разработка сайтов под ключ</p>
+				<div class="header-button-block wow fadeInRightBig data-wow-delay="0.4s"">
 					<a href="https://vk.me/m_igor74" class="header-button">Связаться</a>
 					<small>*Это бесплатно</small>
 				</div>
@@ -51,7 +52,7 @@
 
 <section class="portfolio">
 	<div class="container">
-		<div class="portfolio-block">
+		<div class="portfolio-block wow fadeIn">
 			<h2 class="portfolio-title">Портфолио</h2>
 			<p class="portfolio-subtitle">Мои работы</p>
 			<div class="row">
@@ -89,10 +90,10 @@
 			<div class="col-md-4">
 				<div class="social-block">
 					<p>Подпишитесь:</p>
-					<a href="https://www.facebook.com/profile.php?id=100001814996916"><img src="img/socials/fb-button.png" alt="Фэйсбук"></a>
-					<a href="#"><img src="img/socials/tg-button.png" alt="Телеграм"></a>
-					<a href="https://vk.com/m_igor74"><img src="img/socials/vk-button.png" alt="ВКонтакте"></a>
-					<a href="https://www.youtube.com/channel/UC_htWI9IdOkBdfhRa-VoUbQ"><img src="img/socials/youtube-button.png" alt="YouTube"></a>
+					<a href="https://www.facebook.com/profile.php?id=100001814996916"><img class="wow bounceInDown" data-wow-delay="0.1s" src="img/socials/fb-button.png" alt="Фэйсбук"></a>
+					<a href="#"><img class="wow bounceInDown" data-wow-delay="0.2s" src="img/socials/tg-button.png" alt="Телеграм"></a>
+					<a href="https://vk.com/m_igor74"><img class="wow bounceInDown" data-wow-delay="0.3s" src="img/socials/vk-button.png" alt="ВКонтакте"></a>
+					<a href="https://www.youtube.com/channel/UC_htWI9IdOkBdfhRa-VoUbQ"><img class="wow bounceInDown" data-wow-delay="0.4s" src="img/socials/youtube-button.png" alt="YouTube"></a>
 				</div>
 			</div>
 			<div class="col-md-4">
@@ -106,6 +107,11 @@
 	</div>
 	<!-- /.container -->
 </footer>
+
+<script src="js/wow.min.js"></script>
+<script>
+	new WOW().init();
+</script>
 
 </body>
 </html>
